# dotfiles

./: .commitlintrc.ts  .gitignore  .prettierrc  lefthook-local.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  results.txt  taplo.toml
MangoHud/: MangoHud.conf
RaySession/: RaySession.conf  ray_canvas.json
bat/: config
btop/: .gitignore  btop.conf.tmpl  main.conf
cava/: config
clipse/: config.json  theme.json
ctt/: ctt.lnk  tweaks.json
dconf/: dump.ini  user
doas/: doas.conf
dunst/: dunstrc
fastfetch/: config.jsonc
fcron/: fcron.allow  fcron.conf
fontconfig/: font.conf
gemini/: GEMINI.md
ghostty/: binds.ini  config  main.ini  reset.ini
git/: .gitconfig  .gitmessage  advice.conf  color.conf  config  core.conf  other.conf
hypr/: .gitignore  animations.conf  constants.conf  decoration.conf  envs.conf  general.conf  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  hyprsunset.conf  init_setup.conf  inputs.conf  keybindings.conf  misc.conf  monitors.conf  others.conf  permissions.conf  render.conf  window_rules.conf  workspace_rules.conf
kanata/: asus_integrated.kbd  startup_run.nu  startup_run.ps1
kdl/: kdlfmt.kdl
lefthook/: lefthook.yml
ly/: config.ini  ly_init
maintenance/: links.txt  packages.txt  reproducibility.txt  updates.txt
mpd/: mpd.conf
nushell/: .gitignore  (+4 more)
scripts/waybar/waybar_weather/: .gitignore  Makefile  pyproject.toml  ruff.toml  waybar_weather  waybar_weather.spec
scripts/waybar/waybar_weather/src/waybar_weather/: __main__.py  daily_data.py  hourly_data.py  lib.py  result.py
(+1036 files in other folders)
